Source/WebCore/accessibility/AccessibilityRenderObject.h
@@ -107,7 +107,6 @@ public:
     AccessibilityObject* correspondingControlForLabelElement() const override;
     AccessibilityObject* correspondingLabelForControlElement() const override;
 
-    void ariaOwnsElements(AccessibilityChildrenVector&) const override;
     bool supportsARIAOwns() const override;
     bool isPresentationalChildOfAriaRole() const override;
     bool ariaRoleHasPresentationalChildren() const override;
@@ -176,12 +175,6 @@ public:
     IntRect boundsForRange(const RefPtr<Range>) const override;
     IntRect boundsForRects(LayoutRect&, LayoutRect&, RefPtr<Range>) const;
     void setSelectedVisiblePositionRange(const VisiblePositionRange&) const override;
-    bool supportsARIAFlowTo() const override;
-    void ariaFlowToElements(AccessibilityChildrenVector&) const override;
-    bool supportsARIADescribedBy() const override;
-    void ariaDescribedByElements(AccessibilityChildrenVector&) const override;
-    bool supportsARIAControls() const override;
-    void ariaControlsElements(AccessibilityChildrenVector&) const override;
     bool ariaHasPopup() const override;
 
     bool supportsARIADropping() const override;
@@ -215,7 +208,6 @@ public:
 protected:
     explicit AccessibilityRenderObject(RenderObject*);
     void setRenderObject(RenderObject* renderer) { m_renderer = renderer; }
-    void ariaElementsFromAttribute(AccessibilityChildrenVector&, const QualifiedName&) const;
     bool needsToUpdateChildren() const { return m_childrenDirty; }
     ScrollableArea* getScrollableAreaIfScrollable() const override;
     void scrollTo(const IntPoint&) const override;
